plugins {
    id 'application'
    id "org.jetbrains.kotlin.jvm" version "1.9.10"
    id 'org.springframework.boot' version '3.1.3'
}

repositories {
    mavenCentral()
}

dependencies {
    // dependency management
    implementation(platform('org.springframework.boot:spring-boot-dependencies:_'))
    testImplementation(platform('org.jetbrains.kotlin:kotlin-bom:_'))

    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('io.vavr:vavr:_')


    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation('org.jetbrains.kotlin:kotlin-reflect')
    testImplementation('org.junit.jupiter:junit-jupiter:_')
    testImplementation('org.assertj:assertj-core:_')

    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

application {
    mainClass = 'debit.card.DebitCardApp'
}


tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add("--enable-preview")
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs("--enable-preview")
}

tasks.withType(JavaExec).configureEach {
    jvmArgs("--enable-preview")
}
